<resources>
    <string name="app_name">Pruebame</string>

    <string name="action_settings">Ajustes</string>
    <string name="action_acercade">Acerca de</string>
    <string name="action_nueva">Nueva Pregunta</string>
    <string name="action_atras">Atras</string>
    <string name="action_listado">Listado de Preguntas</string>
    <string name="title_activity_listado">Listado</string>
    <string name="action_sinpreguntas">No hay preguntas definidas</string>
    <string name="titulopregunta">Enunciado</string>
    <string name="pregunta">¿En que...</string>
    <string name="correcta">Correcta</string>
    <string name="falsa">Falsa</string>
    <string name="correctainput">Esta es la correcta</string>
    <string name="falsainput">Esta es falsa</string>

    <string name="categorias">Categorias</string>
    <string name="boton_guardar_pregunta">Guardar</string>
    <string name="write_permission_denied">Denegado</string>
    <string name="write_permission_granted">Aceptados</string>
    <string name="write_permission_accepted">Aceptado</string>
    <string name="write_permission_not_accepted">Denegado</string>
    <string name="your_option">Tu categoria</string>
    <string name="add_new_option">Nueva opcion</string>
    <string name="add">Añadir</string>
    <string name="cancel">Cancelar</string>
    <string name="numero_preguntas">Numero de preguntas:</string>
    <string name="eliminarPregunta">Esta acción no se puede deshacer, ¿Quiere eliminar?</string>
    <string name="delete">eliminar</string>
    <string name="alumno_de_desarrollo_de_aplicaciones_multiplataformas">Alumno de Desarrollo de aplicaciones multiplataformas</string>
    <string name="no_preguntas">No hay preguntas en la base de datos</string>
    <string name="anadir_spinner">Añada una categoria al spinner</string>
    <string name="choose_picture">Imagen de la galeria</string>
    <string name="error_files">error en imagen</string>
    <string name="exportar">Exportar</string>
    <string name="wifi_on">Wifi activado</string>
    <string name="data_on">Datos moviles activados</string>
    <string name="internet_off">Internet desctivado</string>
    <string name="todo">TODO</string>
    <string name="title_activity_settings">Ajustes</string>

    <!-- Strings related to Settings -->

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Internacionalización</string>

    <string name="pref_title_sync_frequency">Cambio de idioma</string>
    <string name="total_categorias">total categorias</string>
    <string-array name="pref_sync_frequency_titles">
        <item>español</item>
        <item>ingles</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>es</item>
        <item>en</item>

    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />


</resources>
