<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".Activity.CrearEditarPreguntaActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/titulopregunta"
                android:textSize="35sp" />

            <EditText
                android:id="@+id/titulo"
                android:layout_width="367dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="15dp"
                android:hint="@string/pregunta"
                android:inputType=""
                android:textSize="25sp" />


            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/correcta"
                android:textSize="35sp" />

            <EditText
                android:id="@+id/titulo2"
                android:layout_width="367dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="15dp"
                android:hint="@string/correctainput"
                android:inputType=""
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/falsa"
                android:textSize="35sp" />

            <EditText
                android:id="@+id/titulo4"
                android:layout_width="367dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="15dp"
                android:hint="@string/falsainput"
                android:inputType=""
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/falsa"
                android:textSize="35sp" />

            <EditText
                android:id="@+id/titulo3"
                android:layout_width="367dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="15dp"
                android:hint="@string/falsainput"
                android:inputType=""
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/falsa"
                android:textSize="35sp" />

            <EditText
                android:id="@+id/titulo5"
                android:layout_width="367dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="15dp"
                android:hint="@string/falsainput"
                android:inputType=""
                android:textSize="25sp" />


            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/categorias"
                android:textSize="35sp" />




            <Spinner
                android:id="@+id/spinner"
                android:layout_width="367dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="5dp"
                android:padding="5dip"
                android:textSize="35dp" />


            <Button
                android:id="@+id/mascategoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="155dp"
                android:text="Añadir" />



        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|right"
        android:orientation="horizontal">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/guardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:clickable="true"
            app:backgroundTint="@color/colorPrimary"
            app:layout_anchor="@+id/include"
            app:layout_anchorGravity="right|bottom" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>